--- a/CheckinPPP.csproj
+++ b/CheckinPPP.csproj
@@ -9,6 +9,7 @@
     <Folder Include="Models\" />
     <Folder Include="Data\" />
     <Folder Include="Data\Entities\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 
@@ -20,5 +21,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.5.0" />
   </ItemGroup>
 </Project>
