--- a/CheckinPPP.csproj
+++ b/CheckinPPP.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>376ce8cf-60f4-4bab-b281-fb23f0f44655</UserSecretsId>
   </PropertyGroup>
 
 
@@ -9,7 +10,6 @@
     <Folder Include="Models\" />
     <Folder Include="Data\" />
     <Folder Include="Data\Entities\" />
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 
@@ -22,5 +22,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
