--- a/CheckinPPP.csproj
+++ b/CheckinPPP.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Models\" />
     <Folder Include="Data\" />
     <Folder Include="Data\Entities\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 
 
@@ -25,5 +26,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
   </ItemGroup>
 </Project>
