--- a/CheckinPPP.csproj
+++ b/CheckinPPP.csproj
@@ -30,6 +30,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
+    <PackageReference Include="Moq" Version="4.14.5" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Properties\secrets.json">
