--- a/CheckinPPP.csproj
+++ b/CheckinPPP.csproj
@@ -40,10 +40,19 @@
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
     </ItemGroup>
     <ItemGroup>
+      <Content Remove="Properties\ServiceDependencies\rccgpppcheckin - Web Deploy\profile.arm.json" />
+      <Content Remove="Properties\ServiceDependencies\rccgpppcheckin - Web Deploy\profile.arm.json" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Update="Properties\secrets.json">
             <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+        </Content>
+        <Content Update="Properties\ServiceDependencies\rccgpppcheckin - Web Deploy\profile.arm.json">
+          <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+          <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
         </Content>
     </ItemGroup>
     <ItemGroup>
