--- a/.gitignore
+++ b/.gitignore
@@ -99,7 +99,7 @@ bld/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-wwwroot/
+#wwwroot/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -409,6 +409,6 @@ appsettings.json
 
 Migrations/
 
-wwwroot/
+#wwwroot/
 
 Properties/ServiceDependencies/rccgpppcheckin - Web Deploy/profile.arm.json
